<resources>
    <string name="app_name">MemeGenerator</string>

    <!-- Image Selection screen -->
    <string name="image_selection_title">Choose Meme Template</string>
    <string name="is_next">Next</string>

    <!-- Labels screen -->
    <string name="labels_title">Fill in labels</string>
    <string name="labels_first_hint">First label</string>
    <string name="labels_second_hint">Second label</string>
    <string name="labels_third_hint">Third label</string>
    <string name="labels_fourth_hint">Fourth label</string>
    <string name="labels_fifth_hint">Fifth label</string>
    <string name="labels_next">Next</string>

    <!-- Result screen -->
    <string name="result_title">Meme is ready!</string>
    <string name="result_copy_to_clipboard">Copy link to clipboard</string>
    <string name="result_save_to_gallety">Save meme to gallery</string>
    <string name="result_one_more_meme">Create one more meme</string>
    <string name="result_error">Can not generate meme</string>
    <string name="result_retry">Try again</string>
    <string name="result_clipboard_label">Meme url</string>
    <string name="result_image_saved">Image saved</string>
    <string name="result_clipboard_confirmation_template">%s has been copied to clipboard</string>
    <string name="result_permission_not_granted">Permission should be granted to save meme to gallery</string>
    <string name="result_gallery_error">Error while saving image to gallery</string>

    <!-- Error dialog -->
    <string name="error_dialog_message">An error occurred while loading.</string>
    <string name="error_dialog_close">Close</string>
    <string name="error_dialog_retry">Retry</string>

</resources>
